--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
@@ -48,3 +47,24 @@ services:
       - kafka
     environment:
       KAFKA_BROKER: kafka:9092
+
+  data-ingestion-mongodb:
+    build:
+      context: .
+      dockerfile: Dockerfile.data_ingestion_mongodb  # Updated to your specific Dockerfile name
+    depends_on:
+      - kafka
+      - mongo
+    environment:
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      MONGO_URI: mongodb://mongo:27017  # Ensure you're pointing to the correct MongoDB instance
+
+  mongo:
+    image: mongo:latest
+    ports:
+      - "27017:27017"  # Expose MongoDB on port 27017
+    volumes:
+      - mongo_data:/data/db  # Persist data in a named volume
+
+volumes:
+  mongo_data:
